Fix bug offscreen header on display heigh shrink
Fix bug where the header moves off screen when the display height
shrinks past a certain point.

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ table {
 /* Non-Reset Styles */
 
 body {
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -60,8 +60,8 @@ body {
 
 h1 {
     font-size: 50px;
-    margin-top: -50px;
     padding-bottom: 50px;
+    margin-top: 50px;
 }
 
 .calculator {
